--- a/blog.html
+++ b/blog.html
@@ -470,6 +470,204 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://middlepot.com/img/10.png"/></center><br>
+<font size = 1><font color="#CBBBB1">
+<center>august . 28 . 2021</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub>🐈</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+aaa i am so happy !!!
+it was my birthday recently, and also the middlepot.com birthday <sub>🎀</sub>
+it has been such a delight to be able to keep this website going on for 4 years, bringing comfort & happiness through many projects, and much more to come, certainly.
+and as you might have seen, the shy bunny store website is completely renewed. i'm so proud of the results !!
+it was a lot of work, that i couldn't ever achieve without the help of bubu <font color="#d3a5a5" style="font-size:11px;">♡♡♡</font>
+as always, he helped me with all the hard coding and server stuff, so we could make the store have payment integrations and a shopping bag feature.
+everything is so cute, and now you can make your own custom felted fluffy friend playing with the new "floof your fluffy" html game :
+</pre>
+<br><br>
+
+<center><a href="https://shybunny.middlepot.com" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/BzMuWPB.gif"/></a></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+you fluffies have been supported me a lot recently, and i have needle felted more than ever before.. which makes me really happy ( a little tired, but i can't complain, this is a dream coming true ) <sub>🌷</sub>
+</pre>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/KVm22WI.jpg"/></center>
+<br><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i made 6 new critters, based on characters from "my fluffy life" ( which we are also working hard at the moment, but only final details for better compatibility on all devices ) ..
+with the 11 total critters, 15 accessories + 4 variations for each, and 5 different item types,, you can make more than a thousand different combinations !!! <sub>💕</sub>
+that would be impossible to achieve with a standard online shop template, as before .. i would need to literally make a thousand items, take pictures of each, edit, and that would obviously be a mess !!
+
+so, i was dealing with this problem by opening the possibility of making custom fluffies by commission - something i am still open for - but of course it was a little complicated.
+often people would just ask for a fluffy with different accessories, or a different critter that i was already intending to make someday ( i felted a custom cow, a frog, and a brown bear ) but it is no longer as much necessary as before, with that many possibilities on the website.
+now i am willing to make commissioned fluffies that are more different and special.. like stuffies inspired by people's pets !! i have made a few of these already. <sub>🐇</sub>
+
+besides all the possibilities of new items, with the new order organization system we were able to work on some nice features for customers, like giving your fluffy friend a name and personality.
+in the near future, i will make some integrations between the felted fluffies and my games, and maybe also the discord server i'm working on.. well, let's see how things go ! <sub>💻</sub>
+
+now the store is more practical to use, because you can purchase directly on it, and think and rethink about what you prefer, without the need of contacting me for it.
+i can send automatic emails for each customer, updating them about the orders, and now with the server we also have a better organization method for dealing with tracking codes - something that used to be a complete mess, since they only give us the country name we couldn't be sure of which code was for specific orders or people...
+now we are using a paid online system that allows us to organize codes by order number, and with much more detailed information too, in real time ( which is very handy when it comes to international shipping )
+but since it was our first time using automatic systems, we found some small issues.. at least, nothing that could be a big bother, so everything is fine and we're little by little working on making the store better each day <sub>🎀</sub>
+
+it was a lot to deal with at once, especially when we're also working on the game, and i have more work to do,, but i am really proud of my store and i want it to grow and become better <sub>💗</sub>
+i am forever grateful for your patience, for trusting me & my work.
+i hope you have fun playing around with the store website, and that you're as excited as i am, for the future features that will be exclusive for customers.
+
+while working on the new shy bunny layout, me and bubu learned a lot of new things, and i had the idea of making my very own tips page !!
+so from now on, i will be accepting tips exclusively there, and if you support me you can be part of the "little angels" message wall.
+the page itself is also really cute, since it's my own website i managed to display the little messages just the way i wanted <sub>💓</sub>
+
+you can choose any amount for your tip ( from $1 - $99 ) , the payments are made safely through paypal, and don't need to put a name and message - but you can, and if you do, and send emojis there, they will appear as my custom emojis ( which is adorable <font color="#d3a5a5" style="font-size:11px;">♡</font> )
+nothing better than making things yourself, without depending on the willingness of platforms to offer good features and customization possibilities !
+
+well, as i promised the last post, i am going to show you today my new ipad, cutely decorated :
+</pre>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/SJJKX3y.gif"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it is quite a simple decoration, but i think it's adorable <sub>💕</sub>
+it looks quite a bit like how i decorated my laptop, actually ..
+some of you wanted to see it, since i showed how i customized my desktop a few times, so here it is :
+</pre>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/6UuQT8F.gif"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+my mouse is a little hamster <sub>🐁</sub>
+and there you can see my tablet too, that i use sooo much for working !!
+i have also customized my browser a little bit more - it's all pale pink now <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+coming back to the ipad ,,
+i have purchased it mainly for doing tests for my game, and other future projects !
+it is quite useful, because it's the perfect balance between a mac and an iphone, when it comes to both the screen size and performance. it's very important to be able to test things using different devices, not only for game developing, but also web design ( i have fixed a lot of issues these days )
+
+also, this ipad isn't just useful for doing tests, but also for myself, and my routine.
+it has a lot of useful features, such as the "shortcuts" app, where you can make many interesting events occur automatically !
+a little complicated to use, but i have been playing around with it a little bit, and it has already helped me getting rid of some of my repetitive daily tasks, such as : finding a specific set of folders / files , opening a specific set of apps / websites, searching a specific set of keywords, writting similar things over and over, specific settings for specific times of day / moods .. <sub>☕️</sub>
+the ipad itself is also really comfortable to use, because i can move it around pretty easily, and i can also use the pen for doodling / writting , or i can use the keyboard when i need to type a lot ( together with the mouse, it becomes like a mini laptop ) , and i can also just use my fingers !
+it's obviously not exactly like a pc, or like a phone, but it is really useful as an intermediate between the two. i didn't know how much i needed it until now LOL
+
+talking bit more on the shortcuts app, i have also used it for applying custom css to websites on safari, so i can change the colors and make them cuter !
+i usually do that on other browsers ( i use opera ) by applying a javascript snippet on the websites, using the "inspect element" section, but i was afraid that i couldn't do that on safari.. and then i discovered that you can also apply javascript on pages, using shortcuts !!
+this is really awesome, and i'm excited to make more complex automatic tools for myself ( when bubu can help me, because those scripts a little too much for me to deal without his help, heh )
+
+i also got procreate, which has been a lovely experience so far <sub>🖇</sub>
+i've been using the photoshop cs6 for editing, drawing, making collages, virtual journaling.. basically everything visual, for many many years now. i am very used to it, so i was a little skeptical about procreate <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+as i said, the ipad is not exactly like a pc, so i don't have access to all the tools & content that i keep on my laptop, and the screen is smaller, which makes it hard to work on bigger pieces ( such as arranging layouts ) and it is obviously impossible to code properly on an ipad, so it's a no no for web design...
+but, when it comes to many other visual works, i must say that procreate really is just as good ( or even better ) than photoshop !
+the thing is : it does have all needed tools for things that doesn't need "dynamic" testing ( such as web design ) except for extremely detailed photo editing ( at least for my needs ) ; so if you'll be using the ipad for drawing, journaling, collaging, studying, or making simple photo edits, it is great !!
+
+the best thing in my opinion is that, as i already mentioned, the ipad is very "flexible" so you can just carry it around anywhere, relax, and do things.
+i know this is a little dramatic, but that changed my life when it comes to journaling - especially for studying !
+after a tiring day of work, the whole day using my laptop, my tablet, and photoshop .. i'm not gonna lie, it is very unmotivating to take more time to stay there and do more and more things, even if it's supposed to be relaxing and fun.
+now, i can just lay down on bed with my ipad, pen.. and start journaling, making some cute doodles, and it's so so nice <sub>🛏</sub>
+
+i lay down on bed with my laptop as well, but i only do that for playing games or watching videos, because i can't use my tablet properly like that ( not even my mouse ) , so i often would just make a "tiny journaling" using my phone, on the line app. which is fine, but a liiittle bit stressful sometimes, since the screen is too small
+so, yes, i am super satisfied with my new device !
+
+another app that i have started using recently is "notion" , for keeping quick notes 
+i really like it, since i can check things from all my devices, and it's also pleasantly clean and highly customizable <sub>🤍</sub>
+i wouldn't use it for journaling or planning, since i prefer the "bullet journal" style for having the freedom to make collages and write things everywhere, and notion is very strict about how things are organized..
+but you can decorate it cutely in a minimalistic aesthetic, and i think it's perfect for quickly taking notes and making lists that i will delete soon ( and wouldn't take time to decorate intricately anyway )
+i'm going to show you how i have decorated my pages so far :
+</pre>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/QsJodQx.gif"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it is quite simple, but it's just what i need at the moment .. !
+( i blurred the text because these are my secret notes with bunch of spoilers about future projects )
+
+now, changing subjects completely :
+do you remember the web page where i remade my first ever layout, from 2006, with all the original content i found on my old folders ?
+while exploring my old folders again i have found more files of layouts i have worked on ( or tried to work on but never finished ) and i discovered that i actually started my first blog on 2004, instead of 2005. my mom helped me making it, and seeing the images from that time made me really emotional.. how much i miss her.
+also, i found another layout project from 2006 that really picked my attention.. because it's certainly the cutest of them all !
+
+from the materials i have and the sketches i made, this layout was supposed to be baby pink + lilac + white, full of pixel frills, have a plushie on top and well.. it's actually pretty much what you would call "babycore" nowadays, and i absolutely love it .. <sub>💟</sub>
+sadly it was a too big of a project for me to finish at the time, as i was moving across states by the time. i remember even though i was pretty hyped and motivated to make this layout, i couldn't get to do so because of all the life changes i was going through.. i was really happy by the time, getting to decorate my new bedroom with my mom, and the new school was great too.
+my blog then entered a neverending hiatus, and got deleted.
+
+well, since i still have many of the files and some posts backup, i decided to make it become reality and finish the layout based on what i have arranged and started working on !!
+i tried to include everything i had in mind, and keep it accordingly to my expectations. <sub>🎗</sub>
+i have pretty clear memories of what my interests were, where i wanted to be, and what i wanted to achieve. with all the texts i have ( both written in diaries and txt files ) it's also very easy to remember how i used to think !
+rereading such things from so many years ago really makes me think about my personal growth and maturing, and also keeps me motivated to believe in myself and make dreams come true <sub>🦋</sub>
+of course my current interests are also mix together, since that layout was never finished i had to put some work into it.
+<a id="linkbjinho" href="https://2006.pooftie.me" target="_blank">2006.pooftie.me</a> is a tribute to my first little blog, where everything began :
+</pre>
+<br><br>
+
+<center><a href="https://2006.pooftie.me" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/RvtpZKl.gif"/></a></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i am very proud of this outcome : a super cute layout, filled with innocence and heartwarming memories, so special to me .. i made this far <font color="#d3a5a5" style="font-size:11px;">♡</font>
+it was so much fun to put together, and i'm happy to share a few of my childhood memories with you fluffies !!
+something that, as a child, would take me months to finish - with lots of help from other people - took me about only 1 week, as an experienced adult.
+that's why i always advice beginners to be patient and not push themselves to work hard and learn things fast. it's no fun this way, and you're not supposed to make web design a burden.. keep practicing, and you'll get better naturally <sub>💖</sub>
+
+i kept most of the blog texts in portuguese, because my english was terrible, so it wouldn't feel right to rewrite my childhood texts in english. sorry if you can't read it, i hope you can enjoy either way <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+it's somehow comforting to see a bit of portuguese once in a while.. i mostly talk in english nowadays, since i spend most of the time on the internet, and most of my friends speak english.
+
+okay, for finishing this post, i would like to briefly talk about messages, questions and requests !
+</pre>
+<br><br>
+<center><sub>💌</sub> <font style="text-shadow: 2px 2px #f7ebe8;">q & a</font> <sub>✏️</sub></center>
+<br>
+<pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">since i am receiving many messages lately, but i am also working a lot lately, it's expected that i would start to be seen as a little unapproachable.. which makes me a little worried, so i'm here to clarify :
+i feel really happy with messages i receive, knowing that you took a bit of your time to make me smile, or that you trust me enough for asking for advice .. it's certainly a delight ♡
+so i try my best to respond to everyone thoughtfully, but when people start resending messages over and over ( probably because they think that i haven't seen it ) it gets quite overwhelming..
+i love talking to you fluffies, and helping as i can. many messages i receive are requests of advice, specific content, or complicated questions - things that would take me a while to do. i try to respond to quick messages as soon as i see them, but when it comes to writing a big message, i take some time during the day to respond, but sometimes i can't get through everyone, because i'm way too tired, and can't get the time to do so ;;
+
+needless to say, i prioritize my health above fulfilling very specific requests of a single person ( i try to do that as well, but i can't do that for everyone ) .. if it is of interest of multiple people, i will certainly save the request on my notes to post about it later on !
+so if i couldn't respond to your message, please know that there is a reason, and it's not because you're bothering me. maybe i will still respond to it at some point, or even post about it, if it's an interesting request. i also can't get to write a huge q&a text every post, even if i have a list of requests, because it easily takes hours and well.. sometimes, i would rather give myself some rest instead ~
+i never find your lovely messages a bother ( if, naturally, a kind and honest message, of course ) but i ask for your patience when it comes to responses, because i like to make sure i'm responding, helping & clarifying doubts properly. that always takes some time to do.
+i also can't completely ignore the doubts of people who are not so kind with their choice of words - even if i never respond to them - i try to clarify the situation writing about it here as well ( if there is a point in their message, and not just meaningless hate, or a random rumor ) .. !
+</pre>
+
+<br><br>
+that's it for today, i wish you fluffies lots of happiness <sub>🌱</sub>
+<br><br>
+
+xoxo <sub>💓</sub>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://middlepot.com/img/10.png"/></center><br>
+<br>
+
 <center><img src="https://middlepot.com/img/16.png"/></center><br>
 <font size = 1><font color="#CBBBB1">
 <center>july . 19 . 2021</center>
