--- a/faq.html
+++ b/faq.html
@@ -478,6 +478,8 @@ z-index: 11;
 <font color="#aa8f8f"> | </font><a href="#purity"><font color="#d8b6b6">purity & innocence</font></a>
 <font color="#aa8f8f"> | </font><a href="#fashion"><font color="#d8b6b6">some fashion talk</font></a>
 <font color="#aa8f8f"> | </font><a href="#cc"><font color="#d8b6b6">ccs, ids & kins</font></a>
+<font color="#aa8f8f"> | </font><a href="#inspiration"><font color="#d8b6b6">about inspired accounts</font></a>
+<font color="#aa8f8f"> | </font><a href="#messages"><font color="#d8b6b6">messages & requests</font></a>
 <font color="#aa8f8f"> | </font><a href="#internet"><font color="#d8b6b6">my internet past</font></a>
 <font color="#aa8f8f"> | </font><a href="#agere"><font color="#d8b6b6">about agere & communities</font></a>
 <font color="#aa8f8f"> | </font><a href="#dx"><font color="#d8b6b6">about self dx</font></a>
@@ -511,7 +513,6 @@ z-index: 11;
 <font color="#aa8f8f"> | </font><a href="#ib"><font color="#d8b6b6">imageboards issues</font></a>
 <font color="#aa8f8f"> | </font><a href="#pet"><font color="#d8b6b6">about pet buying</font></a>
 <font color="#aa8f8f"> | </font><a href="#phone"><font color="#d8b6b6">about phone customization</font></a>
-<font color="#aa8f8f"> | </font><a href="#inspiration"><font color="#d8b6b6">about inspired accounts</font></a>
 <br>
 <br><br>
 <font color="#d1b9b1"><font size="2">※</font> there will be updates and new topics from time to time</font>
@@ -1415,6 +1416,39 @@ that being said, i don't mind at all if you like them too !
 <br><br><br><br><br><br>
 </font>
 
+<a name="inspiration" id="inspiration"></a><br>
+<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　how i feel about accounts inspired on mine ?</font><br><br><br>
+<font color="#d8b9af">　( january . 30 . 2021 )</font>
+<br><br>
+<font color="#B1A69E">
+<pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">lately i have received questions on how i feel about people who get inspired by my content. it seems that there are many accounts around the internet that look very similar to mine.. and well, each time i see new content with similar ideas / aesthetic, i feel happy and proud ♡
+i keep in mind that the point of all my work and efforts is not to feed my ego, but inspire others to become a better version of themselves. if they find comfort in my personal aesthetic or something similar, i can safely believe that i'm spreading good things !!
+sharing kindness is always welcome ! it's just so great to see that community growing and more people creating new things.. it's all i ever dreamed of, and there is no way i could let my ego get in the way of my peace of mind just so i can feel "special". i also get inspired by others all the time, i'm not above or below any of these people, we're just all trying to be happy. 
+i think that being careful to make new content and not just replicate other's ideas over and over is better spent time, but we hardly get ideas completely out of nowhere : we often mix things together, and this is valid as well. experimenting is important.
+
+finding an account that looks really similar to yours, specially when the person isn't even giving credits, can be bothering. i understand, but i also understand the point of someone who is partially ( or entirely ) copying others .. it can be really embarrassing to give the source of all your ideas. hiding the source is just an immature way of trying to find their comfort zone, to avoid people saying they're not original, and it usually doesn't take too long for the person to get new ideas, detach a bit from that one specific "idol" and feel more confident to share sources of inspiration.
+for that reason, it's important to be patient with these people. instead of getting angry and talking to them in an intimidating way, remember that you're someone they look forward and that it would be really painful for them. when you're rude, people often get into a "self defense state" and act rudely too. the best thing to do is just ignore and keep doing what you're doing !!
+if there are people getting inspired by your work, you're in the right path. there is no need to feel afraid, there is no one trying to steal your identity. ♡
+also : we must accept that other people can find success by doing similar things that you do. this is not a competition !!!
+</pre><br><br><br><br><br><br>
+</font>
+
+<a name="messages" id="messages"></a><br>
+<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　how frequently can i respond to messages and requests ?</font><br><br><br>
+<font color="#d8b9af">　( august . 28 . 2021 )</font>
+<br><br>
+<font color="#B1A69E">
+<pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">since i am receiving many messages lately, but i am also working a lot lately, it's expected that i would start to be seen as a little unapproachable.. which makes me a little worried, so i'm here to clarify :
+i feel really happy with messages i receive, knowing that you took a bit of your time to make me smile, or that you trust me enough for asking for advice .. it's certainly a delight ♡
+so i try my best to respond to everyone thoughtfully, but when people start resending messages over and over ( probably because they think that i haven't seen it ) it gets quite overwhelming..
+i love talking to you fluffies, and helping as i can. many messages i receive are requests of advice, specific content, or complicated questions - things that would take me a while to do. i try to respond to quick messages as soon as i see them, but when it comes to writing a big message, i take some time during the day to respond, but sometimes i can't get through everyone, because i'm way too tired, and can't get the time to do so ;;
+
+needless to say, i prioritize my health above fulfilling very specific requests of a single person ( i try to do that as well, but i can't do that for everyone ) .. if it is of interest of multiple people, i will certainly save the request on my notes to post about it later on !
+so if i couldn't respond to your message, please know that there is a reason, and it's not because you're bothering me. maybe i will still respond to it at some point, or even post about it, if it's an interesting request. i also can't get to write a huge q&a text every post, even if i have a list of requests, because it easily takes hours and well.. sometimes, i would rather give myself some rest instead ~
+i never find your lovely messages a bother ( if, naturally, a kind and honest message, of course ) but i ask for your patience when it comes to responses, because i like to make sure i'm responding, helping & clarifying doubts properly. that always takes some time to do.
+i also can't completely ignore the doubts of people who are not so kind with their choice of words - even if i never respond to them - i try to clarify the situation writing about it here as well ( if there is a point in their message, and not just meaningless hate, or a random rumor ) .. !
+</pre><br><br><br><br><br><br>
+</font>
 
 <a name="internet" id="internet"></a><br>
 <sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　how was my past on the internet ?</font><br><br><br>
@@ -2152,23 +2186,6 @@ the app drawer page ( where all of them appear ) don't have customizable icons, 
 so, basically touch and hold the main screen and try all the customization options you find until you're satisfied ! you can also place images floating on the screen with the photo widget ( they can have transparent background too )
 tip : you will only see ads while customizing some things in the settings and sometimes on the app drawer page so it's not a bother, but ads will also appear if you leave an app folder with empty space. just fill all the folders so that doesn't happen !
 </pre><br><br><br><br><br><br>
-</font>
-
-<a name="inspiration" id="inspiration"></a><br>
-<sub><sub><img src="https://i.imgur.com/aliDJwQ.png"></sub></sub><font color="#c4afa8">　how i feel about accounts inspired on mine ?</font><br><br><br>
-<font color="#d8b9af">　( january . 30 . 2021 )</font>
-<br><br>
-<font color="#B1A69E">
-<pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">lately i have received questions on how i feel about people who get inspired by my content. it seems that there are many accounts around the internet that look very similar to mine.. and well, each time i see new content with similar ideas / aesthetic, i feel happy and proud ♡
-i keep in mind that the point of all my work and efforts is not to feed my ego, but inspire others to become a better version of themselves. if they find comfort in my personal aesthetic or something similar, i can safely believe that i'm spreading good things !!
-sharing kindness is always welcome ! it's just so great to see that community growing and more people creating new things.. it's all i ever dreamed of, and there is no way i could let my ego get in the way of my peace of mind just so i can feel "special". i also get inspired by others all the time, i'm not above or below any of these people, we're just all trying to be happy. 
-i think that being careful to make new content and not just replicate other's ideas over and over is better spent time, but we hardly get ideas completely out of nowhere : we often mix things together, and this is valid as well. experimenting is important.
-
-finding an account that looks really similar to yours, specially when the person isn't even giving credits, can be bothering. i understand, but i also understand the point of someone who is partially ( or entirely ) copying others .. it can be really embarrassing to give the source of all your ideas. hiding the source is just an immature way of trying to find their comfort zone, to avoid people saying they're not original, and it usually doesn't take too long for the person to get new ideas, detach a bit from that one specific "idol" and feel more confident to share sources of inspiration.
-for that reason, it's important to be patient with these people. instead of getting angry and talking to them in an intimidating way, remember that you're someone they look forward and that it would be really painful for them. when you're rude, people often get into a "self defense state" and act rudely too. the best thing to do is just ignore and keep doing what you're doing !!
-if there are people getting inspired by your work, you're in the right path. there is no need to feel afraid, there is no one trying to steal your identity. ♡
-also : we must accept that other people can find success by doing similar things that you do. this is not a competition !!!
-</pre><br><br><br><br>
 </font>
 
 </div>
