--- a/links.html
+++ b/links.html
@@ -448,34 +448,39 @@ z-index: 3;
 
 <div id="stuff">
 
-<div style="position:absolute; left:23%; right:23%;">
+<div style="position:absolute; left:22%; right:22%;">
 <br><br><br>
 <style>
 #ooo { color: #c4a9ab; }
-#actv { color: #d1abab; }
-#eee { color: #d1abab; }
 </style>
 
-<div style="position:relative;  top:5; width: 110px; height: 200px; overflow:hidden; float:left; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; line-height:13px; padding:5px;">
+<div style="position:relative;  top:-8; width: 120px; height: 225px; overflow:hidden; float:left; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; line-height:14px; padding:5px;">
 <font color="#b89c9f">
-<sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/ihkqM9r.png"></sub></sub></sub> my accs :<br></font>
+<sub><sub><sub><img width="auto" height="22px" src="https://i.imgur.com/ihkqM9r.png"></sub></sub></sub> ‌ my casual accs :</font><div style="line-height:3px;"><br>
+<br></div>
+ ‌ <font color="#7a6b6b">tmblr : </font><a id="ooo" title="aesthetic blog" href="https://pooftie.me" target="_blank" >pooftie</a><br>
+ ‌ <font color="#7a6b6b">twt : </font><a id="ooo" title="comfort acc" href="https://twitter.com/pooftie" target="_blank" >pooftie</a><br>
+ ‌ <font color="#7a6b6b">insta : </font><a id="ooo" title="self care acc" href="https://instagr.am/pooftie" target="_blank" >pooftie</a><br>
+ ‌ <font color="#7a6b6b">yt : </font><a id="ooo" title="playlist ch" href="https://youtube.com/pooftie" target="_blank" >pooftie</a><br>
+ ‌ <font color="#7a6b6b">steam : </font><a id="ooo" title="gaming community" href="https://s.team/u/pooftie" target="_blank" >pooftie</a><br>
+ ‌ <font color="#7a6b6b">line : </font><a id="ooo" title="chat app" href="https://line.me/ti/p/~pooftie" target="_blank" >pooftie</a><br>
+ ‌ <font color="#7a6b6b">dsc : </font><a id="ooo" title="add server" href="https://dsc.gg/pooftie" target="_blank" >pooftie</a><font color="#cfb8ba" style="font-size:8px;">#1997</font><br>
 <br>
-　<font color="#7a6b6b">tmblr </font><a id="actv" title="aesthetic blog" href="https://pooftie.me" target="_blank" >♡</a>　<font color="#7a6b6b">yt </font><a id="actv" title="playlist ch" href="https://www.youtube.com/pooftie" target="_blank" >♡</a><br>
-　<font color="#7a6b6b">twt </font><a id="actv" title="comfy acc" href="https://twitter.com/pooftie" target="_blank" >♡</a>　<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/pooftie" target="_blank" >♡</a><br>
+<sub><sub><sub><img width="auto" height="22px" src="https://i.imgur.com/AZjYJOQ.png"></sub></sub></sub><font color="#b89c9f"> ‌ my dev accs :</font><div style="line-height:3px;"><br>
+<br></div>
+ ‌ <font color="#7a6b6b">steam : </font><a id="ooo"title="pc platform" href="https://steampowered.com/dev/middlepot/lists/" target="_blank" >middlepot</a><br>
+ ‌ <font color="#7a6b6b">github : </font><a id="ooo" title="web platform" href="https://github.com/middlepot" target="_blank" >middlepot</a><br>
+ ‌ <font color="#7a6b6b">apple : </font><a id="ooo" title="ios platform" href="" >middlepot</a><br>
+ ‌ <font color="#7a6b6b">play : </font><a id="ooo" title="android platform" href="https://play.google.com/store/apps/dev?id=6235261695333627392" target="_blank" >middlepot</a><br>
 <br>
-<sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/AZjYJOQ.png"></sub></sub></sub><font color="#b89c9f"> chat apps :</font><br>
-<br>
-　<font color="#7a6b6b">line </font><a id="eee" title="friend req" href="https://line.me/ti/p/~pooftie" target="_blank" >♡</a>　<font color="#7a6b6b">dscrd </font><a id="eee" title="server inv" href="https://dsc.gg/pooftie" target="_blank" >♡</a><br>
-<br>
-<sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/DWrloPs.png"></sub></sub></sub><font color="#b89c9f"> gamedev :</font><br>
-<br>
-　<font color="#7a6b6b">steam </font><a id="eee" title="pc platform" href="https://s.team/u/middlepot" target="_blank" >♡</a>　<font color="#7a6b6b">play </font><a id="eee" title="android platform" href="https://play.google.com/store/apps/dev?id=6235261695333627392" target="_blank" >♡</a><br>
 </div>
 
-<div style="position:relative; top:5; float:right; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 115px; height: 200px; overflow-x:hidden; line-height:13px; padding:5px;">
+<div style="position:relative; top:-8; float:right; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 120px; height: 225px; overflow-x:hidden; line-height:14px; padding:5px;">
 <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b89c9f">
- my web pages :</font><br>
-<div style="border: none; width: 100px; height: 170px; margin-top:6px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:13px; padding-right:5px; padding-left:5px;">
+ ‌ my web pages :</font><br>
+<div style="border: none; width: 105px; height: 200px; margin-top:6px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:14px; padding-right:7px; padding-left:5px;">
+<a id="ooo" href="https://2006.pooftie.me" target="_blank" >soft tribute</a>
+<br>
 <a id="ooo" href="https://emoji.pooftie.me" target="_blank" >my emoji pack</a>
 <br>
 <a id="ooo" href="https://sozai.pooftie.me" target="_blank" >web materials</a>
@@ -515,13 +520,14 @@ z-index: 3;
 
 <br><br><br><br><br><br><br><br>
 </div>
-<div style="position:absolute; left:20%; right:20%; top:70%;">
+<div style="position:absolute; left:20%; right:20%; top:73%; line-height:14px;">
 <font color="#a59490" style="font-size:9px;">
 <center><b>important :</b><br>
-i do have some secret accounts that i use for backup or personal stuff, but i don't use "pooftie" or "middlepot" on these, so if you see any account with my name out there that is not on that list, <b>it's not mine</b>.<br>
-if you have any doubts, please don't hesitate to contact me :<br><br></font>
-<font id="linkzinho" color="#cea9a9">middlepot@gmail.com</font></font></center>
-<br><br><br>
+these are all of my active and public accounts. please only consider<br>
+the accounts on this list as mine, unless stated otherwise.<br>
+if you have any questions, please don't hesitate to contact me :</font><div style="line-height:3px;"><br>
+<br></div>
+<a style="text-decoration:none;" href="mailto:middlepot@gmail.com"><font id="linkzinho" color="#cea9a9">middlepot@gmail.com</font></a></font></center>
 
 </div>
 </div>
