--- a/portfolio.html
+++ b/portfolio.html
@@ -467,12 +467,12 @@ z-index: 3;
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ web design ..<br><br></font><br>
-<a href="https://pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/f0mz3xF.png"></a><br><br>
-<a href="https://shybunny.middlepot.com" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/M9rz3ho.gif"></a><br><br>
-<a href="https://sozai.pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/iKzepMO.gif"></a><br><br>
 <a href="https://1997.pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/INDlrdR.gif"></a><br><br>
-<a href="https://ch.pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/lIjAnkz.gif"></a><br><br>
-<a href="https://utf8.pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/qyIhmW6.png"></a>
+<a href="https://shybunny.middlepot.com" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/M9rz3ho.gif"></a><br><br>
+<a href="https://pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/f0mz3xF.png"></a><br><br>
+<a href="https://2006.pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/gSvNpbe.gif"></a><br><br>
+<a href="https://utf8.pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/qyIhmW6.png"></a><br><br>
+<a href="https://ch.pooftie.me" target="_blank"><img width="300px" height="auto" src="https://i.imgur.com/lIjAnkz.gif"></a>
 <br><br><br><br>
 <img src="https://i.imgur.com/hBScfeO.png"></center></font>
 <center>
@@ -480,7 +480,7 @@ z-index: 3;
 
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ needle felting ..<br><br></font><br><br>
-　<img width="auto" height="250px" src="https://i.imgur.com/9Em5GNT.jpg"><br><br>
+　<img width="auto" height="250px" src="https://i.imgur.com/JUJ6rgu.jpg"><br><br>
 　<img width="auto" height="250px" src="https://i.imgur.com/WOx9j1W.png">　
 <img width="auto" height="250px" src="https://i.imgur.com/HnO6VtX.png"><br><br>
 <img width="auto" height="150px" src="https://i.imgur.com/vlSTDfe.png">　
@@ -840,6 +840,8 @@ function resetPlayer() {
 
 <br><br><font color="#9e8976"><sub><img src="https://i.imgur.com/6HWtiLA.png"></sub> ‌ pc & mobile customization ..<br><br></font><br><br>
 <img width="400px" height="auto" src="https://i.imgur.com/ubcAKg9.gif"><br><br>
+<img width="400px" height="auto" src="https://i.imgur.com/6UuQT8F.gif"><br><br>
+<img width="400px" height="auto" src="https://i.imgur.com/SJJKX3y.gif"><br><br>
 <img width="auto" height="350px" src="https://i.imgur.com/QmXja0G.png">　
 <img width="auto" height="350px" src="https://i.imgur.com/GT9w9dG.jpg"><br><br>
 <img width="auto" height="350px" src="https://i.imgur.com/eK2OD8Z.jpg">　
