--- a/tips.html
+++ b/tips.html
@@ -529,6 +529,7 @@ your kindness, forever cherished <sub>🌷</sub>
 </style>
 
 <div id="messages-container">
+	<div class="messages"><sub>🎗 </sub> <b>a little angel</b> sent a tip !<br>" <3 "</div>
 	<div class="messages"><sub>🎗 </sub> <b>puri</b> sent a tip !<br>" for being an angel 💐 "</div>
 	<div class="messages"><sub>🎗 </sub> <b>a little angel</b> sent a tip !<br></div>
 	<div class="messages"><sub>🎗 </sub> <b>a little angel</b> sent a tip !<br>" thank you for always helping me!! ♡♡♡ "</div>
