--- a/404.html
+++ b/404.html
@@ -456,7 +456,7 @@ z-index: 3;
 page not found !
 </font>
 <br><br>
-<img width="auto" height="50px" src="https://i.imgur.com/dtVzJMm.png">
+<img width="auto" height="50px" src="https://middlepot.com/img/middlepotteddy.png">
 
 </center>
 </div>
