--- a/help.html
+++ b/help.html
@@ -1355,14 +1355,9 @@ function getPosition(el) {
 <br><br><center><img src="https://i.imgur.com/9EkFzLw.png"></center>
 <br>
 <font color="#b78f8f">
-<font size="1">※</font> do you have something important to add ? please tell me !</font>
+<font size="1">※</font> do you have something important to add ? contact me <a style="color:#b78f8f;" href="/contact">here</a> !<br>
+<font size="1">※</font> tell your friends about this page and help other people.</font>
 <br><br>
-
-
-<br><br>
-<center><font color="#bc7373">tell your friends about this page and help other people !!
-
-</font>
 
 </div>
 
