--- a/help.html
+++ b/help.html
@@ -658,7 +658,7 @@ function getPosition(el) {
 <br><br>
 <br><a name="suicide" id="suicide"></a><br>
 <img src="https://i.imgur.com/Whw2SOT.png"> <font color="#b29372" style="font-size:9px">suicide :</font><br><br>
-・ if you want to suicide for any reason rembeber that you will go through your problems like many other people<br>
+・ if you want to suicide for any reason remember that you will go through your problems like many other people<br>
 ・ say to yourself that you will wait 24 hours before doing it. or more. feelings and action are two different things, just because you feel that like killing yourself you don't actually have to do it right now<br>
 ・ people often choose suicide to relief their pain. remember that relief is a feeling and you need to be alive to feel it. you won't find relief if you're dead<br>
 ・ instead of ending your life, try to begin it.<br>
