--- a/links.html
+++ b/links.html
@@ -458,25 +458,25 @@ z-index: 3;
 <font color="#b89c9f">
 <sub><sub><sub><img width="auto" height="22px" src="https://i.imgur.com/ihkqM9r.png"></sub></sub></sub> ‌ my casual accs :</font><div style="line-height:3px;"><br>
 <br></div>
- ‌ <font color="#7a6b6b">tmblr : </font><a id="ooo" title="aesthetic blog" href="https://pooftie.me" target="_blank" >pooftie</a><br>
- ‌ <font color="#7a6b6b">twt : </font><a id="ooo" title="comfort acc" href="https://twitter.com/pooftie" target="_blank" >pooftie</a><br>
- ‌ <font color="#7a6b6b">insta : </font><a id="ooo" title="self care acc" href="https://instagr.am/pooftie" target="_blank" >pooftie</a><br>
- ‌ <font color="#7a6b6b">yt : </font><a id="ooo" title="playlist ch" href="https://youtube.com/pooftie" target="_blank" >pooftie</a><br>
- ‌ <font color="#7a6b6b">steam : </font><a id="ooo" title="gaming community" href="https://s.team/u/pooftie" target="_blank" >pooftie</a><br>
- ‌ <font color="#7a6b6b">line : </font><a id="ooo" title="chat app" href="https://line.me/ti/p/~pooftie" target="_blank" >pooftie</a><br>
- ‌ <font color="#7a6b6b">dsc : </font><a id="ooo" title="add server" href="https://dsc.gg/pooftie" target="_blank" >pooftie</a><font color="#cfb8ba" style="font-size:8px;">#1997</font><br>
+ ‌  ‌‌ <font color="#7a6b6b">tmblr : </font><a id="ooo" title="aesthetic blog" href="https://pooftie.me" target="_blank" >pooftie</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">twt : </font><a id="ooo" title="comfort acc" href="https://twitter.com/pooftie" target="_blank" >pooftie</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">insta : </font><a id="ooo" title="self care acc" href="https://instagr.am/pooftie" target="_blank" >pooftie</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">yt : </font><a id="ooo" title="playlist ch" href="https://youtube.com/pooftie" target="_blank" >pooftie</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">steam : </font><a id="ooo" title="gaming community" href="https://s.team/u/pooftie" target="_blank" >pooftie</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">line : </font><a id="ooo" title="chat app" href="https://line.me/ti/p/~pooftie" target="_blank" >pooftie</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">dsc : </font><a id="ooo" title="add server" href="https://dsc.gg/pooftie" target="_blank" >pooftie</a><font color="#cfb8ba" style="font-size:8px;">#1997</font><br>
 <br>
 <sub><sub><sub><img width="auto" height="22px" src="https://i.imgur.com/AZjYJOQ.png"></sub></sub></sub><font color="#b89c9f"> ‌ my dev accs :</font><div style="line-height:3px;"><br>
 <br></div>
- ‌ <font color="#7a6b6b">steam : </font><a id="ooo"title="pc platform" href="https://steampowered.com/dev/middlepot/lists/" target="_blank" >middlepot</a><br>
- ‌ <font color="#7a6b6b">github : </font><a id="ooo" title="web platform" href="https://github.com/middlepot" target="_blank" >middlepot</a><br>
- ‌ <font color="#7a6b6b">apple : </font><a id="ooo" title="ios platform" href="" >middlepot</a><br>
- ‌ <font color="#7a6b6b">play : </font><a id="ooo" title="android platform" href="https://play.google.com/store/apps/dev?id=6235261695333627392" target="_blank" >middlepot</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">steam : </font><a id="ooo"title="pc platform" href="https://steampowered.com/dev/middlepot/lists/" target="_blank" >middlepot</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">github : </font><a id="ooo" title="web platform" href="https://github.com/middlepot" target="_blank" >middlepot</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">apple : </font><a id="ooo" title="ios platform" href="" >middlepot</a><br>
+ ‌  ‌‌ <font color="#7a6b6b">play : </font><a id="ooo" title="android platform" href="https://play.google.com/store/apps/dev?id=6235261695333627392" target="_blank" >middlepot</a><br>
 <br>
 </div>
 
 <div style="position:relative; top:-8; float:right; overflow:hidden; border-style: solid; border-width: 15px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 120px; height: 225px; overflow-x:hidden; line-height:14px; padding:5px;">
-<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b89c9f">
+<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/vwcukYQ.png"></sub></sub><font color="#b09698">
  ‌ my web pages :</font><br>
 <div style="border: none; width: 105px; height: 200px; margin-top:6px; overflow-x:hidden; overflow: auto; overflow: scroll; line-height:14px; padding-right:7px; padding-left:5px;">
 <a id="ooo" href="https://2006.pooftie.me" target="_blank" >soft tribute</a>
@@ -495,7 +495,7 @@ z-index: 3;
 <br>
 <a id="ooo" href="https://aes.pooftie.me" target="_blank" >aesthetic journal</a>
 <br>
-<a id="ooo" href="https://tea.pooftie.me" target="_blank" >weather for tea?</a>
+<a id="ooo" href="https://tea.pooftie.me" target="_blank" >weather for tea ?</a>
 <br>
 <a id="ooo" href="https://1997.pooftie.me" target="_blank" >win95 desktop</a>
 <br>
