--- a/pupe/13.html
+++ b/pupe/13.html
@@ -210,34 +210,36 @@ menuuuuuuuuuuuuuuu
 <sub><sub><sub><img width="auto" height="20px" src="https://file.pooftie.me/pupe/pf.png"></sub></sub></sub> ‌ <b>puf</b><br><br>
 </font>
 
-<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf12.png">
+<img style="position:absolute; left:15px; top:25px;" width="auto" height="230px" src="https://file.pooftie.me/pupe/puf13.png">
 
 <div style="position:absolute; top:5px; left:135px; overflow:hidden; border-style: solid; border-width: 10px; border-color: rgba(255, 255, 255, 0.01); border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 115px; height: 180px; overflow-x:hidden; line-height:13px; padding:5px; padding-top:1px;">
 <font color="#a37c81" style="font-size:8px;">
-<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf12+.png"></sub></sub></sub></sub> ‌ <b>cute tea party</b><br></font>
+<sub><sub><sub><sub><img width="auto" height="28px" src="https://file.pooftie.me/pupe/puf13+.png"></sub></sub></sub></sub> ‌ <b>home sweet home</b><br></font>
 <div style="border: none; width: 110px; height: 145px; margin-top:4px; overflow-x:hidden; line-height:10px; padding-right:5px; padding-left:0px;">
 ‌<font color="#b0878d" style="font-size:7px;">
 • Heart effect/11BJ<br>
-‌ • Bear retro suitcase/bg12CJ<br>
+‌ • Cork sole shoes/br12GJ<br>
 ‌ • Mascara/001<br>
-‌ • Chiffon blouse/12GJ<br>
-‌ • Cork sole shoes/wh12GJ<br>
 ‌ • Hair glitter/12KJ<br>
-‌ • Lady-like Lace Collar/wh12IJ<br>
+‌ • My garden Wall Paper/13AJ<br>
 ‌ • Decolletage beaty cream/11KJ<br>
-‌ • Bunny and Toy Box/wh12JJ<br>
-‌ • Lace flower socks/11H<br>
-‌ • Dolly long05/12DJ<br>
-‌ • Puff sleeved blouse/12F<br>
+‌ • Glitteringly mat effect/11EJ<br>
+‌ • Broom/12LJ<br>
+‌ • Lolita socks/13A<br>
+‌ • Simple ball earrings/wh09L<br>
 ‌ • Brilliantlyglitteringly effect/11BJ<br>
-‌ • Tea set and cake/12IJ<br>
-‌ • Antique lace barrette/12F<br>
+‌ • Apple Jute Bag/wh12K<br>
+‌ • Antique flooring/11IJ<br>
+‌ • Country dress/pr12K<br>
 ‌ • Bridal inner for dress/13F<br>
-‌ • Sweet heart effect/11KJ<br>
-‌ • Soft heart effect/12BJ<br>
-‌ • Antique skirt/12F<br>
+‌ • Cute pirate02/12G<br>
+‌ • Shrine maiden's ribbon hairband/12LJ<br>
+‌ • Cheeky Marmot Bag/rd12IJ<br>
+‌ • Puppy carry cart/rd12EJ<br>
 ‌ • Color contact lens 009<br>
+‌ • Picnic Blanket/12KJ<br>
 ‌ • Eye glitter/11KJ<br>
+‌ • Angel ring effect/11EJ<br>
 ‌ • Lace half pants/wh12CJ<br>
 ‌ • Tiara marriage ring/13F<br>
 ‌ • Blush 007<br>
@@ -245,12 +247,10 @@ menuuuuuuuuuuuuuuu
 </div>
 </div>
 
-<font color="#a37c81" style="position:absolute; left:145px; top: 220px; font-size:8px; line-height:12px;">
-<a href="https://file.pooftie.me/pupe/cute%20tea%20party.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
-<a href="/pupe/11"><font color="#b08087">← previous outfit</font></a><br>
-<a href="/pupe/13"><font color="#b08087">next outfit →</font></a>
+<font color="#a37c81" style="position:absolute; left:145px; top: 225px; font-size:8px; line-height:12px;">
+<a href="https://file.pooftie.me/pupe/home%20sweet%20home.gif" target="_blank"><font color="#b08087">full animated snapshot</font></a><br>
+<a href="/pupe/12"><font color="#b08087">← previous outfit</font></a>
 </font>
-
 
 </body>
 
